# suba-control

./: .gitignore  COMMIT_MESSAGE.md  DEVELOPMENT_NOTES.md  README-SUBARU-THEME.md  README.md  build.gradle  example.local.properties  gradle.properties  settings.gradle  testws.html
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/subacontrol/: MainActivity.kt
app/src/main/java/com/example/subacontrol/accessibility/: TapAccessibilityService.kt
app/src/main/java/com/example/subacontrol/calibration/: CalibrationDialog.kt
app/src/main/java/com/example/subacontrol/debug/: TestServer.kt
app/src/main/java/com/example/subacontrol/overlay/: CursorOverlay.kt  OverlayService.kt
app/src/main/java/com/example/subacontrol/ui/: ControlPanelScreen.kt
app/src/main/java/com/example/subacontrol/util/: Constants.kt  EventBus.kt  WebSocketManager.kt
app/src/main/java/com/example/subacontrol/websocket/: WebSocketReceiver.kt
app/src/main/res/layout/: activity_main.xml  cursor_overlay.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_config.xml  network_security_config.xml
backend/: .env.example  .gitignore  package-lock.json  package.json
backend/config/: constant.js
backend/hooks/: index.js
backend/hooks/mousehook/: CMakeLists.txt  binding.gyp  index.js  package-lock.json
backend/hooks/mousehook/src/: mousehook.cpp
backend/server/: index.js
backend/server/input/: mouseHandler.js
backend/server/ws/: wsServer.js
backend/utils/: logger.js
(+4 files in other folders)
